Merge branch 'main' into thiagohora/NA_fix_openapi_generated_docs